--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,1 +1,11 @@
-@import "./scss/footer"
+@import "./scss/font";
+@import "./scss/reset";
+@import "./scss/contenedor";
+@import "./scss/navegacion";
+@import "./scss/home";
+@import "./scss/about";
+@import "./scss/services";
+@import "./scss/portfolio";
+@import "./scss/contact";
+@import "./scss/footer";
+@import "./scss/medias";
