--- a/css/scss/_about.scss
+++ b/css/scss/_about.scss
@@ -1,6 +1,6 @@
 .about__grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
     gap: 60px;
 
     .about__description {
@@ -75,7 +75,7 @@
     .about__skills {
 
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: 1fr 1fr 1fr;
         gap: 15px;
 
         & .skill__title {
