--- a/css/scss/_contact.scss
+++ b/css/scss/_contact.scss
@@ -1,6 +1,6 @@
 .contact__grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
 
         & a {
@@ -13,6 +13,10 @@
         padding: 50px;
         border-radius: 10px;
         transition: all 0.3s;
+
+        & p {
+            margin-bottom: 0;
+        }
         
         &:hover {
             transition: all 1s;
