--- a/css/scss/_font.scss
+++ b/css/scss/_font.scss
@@ -8,7 +8,7 @@ $alternative-black-color: #191919;
 	color: $font-color;
 	font-size: 35px;
 	margin-bottom: 40px;
-	background-color: re;
+	font-weight: bold;
 }
 
 section {
@@ -30,4 +30,5 @@ section {
 	color: $subtitle-color;
 	margin-bottom: 30px;
 	font-size: 20px;
+	font-weight: bold;
 }
